--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,1 +1,5 @@
 remote_theme: pages-themes/cayman@v0.2.0:
+
+title: Розробка мобільної версії гри "The Wanderer of Amberfalls" в жанрі Roguelike
+
+description: Дипломна робота Куценко О.О.
