--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,4 +1,6 @@
-remote_theme: pages-themes/cayman@v0.2.0:
+remote_theme: pages-themes/hacker@v0.2.0
+plugins:
+- jekyll-remote-theme # add this line to the plugins list if you already have one
 
 title: Розробка мобільної версії гри "The Wanderer of Amberfalls" в жанрі Roguelike
 
