--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,6 +2,8 @@ remote_theme: pages-themes/hacker@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 
+gem "github-pages", group: :jekyll_plugins
+
 title: Розробка мобільної версії гри "The Wanderer of Amberfalls" в жанрі Roguelike
 
 description: Дипломна робота Куценко О.О.
